<?xml version="1.0"?>
<package format="2">
  <name>ro_sam_2d</name>
  <version>0.0.0</version>
  <description>The ro_sam_2D package</description>
  <maintainer email="abhishek.goudar@robotics.utias.utoronto.ca">Abhishek Goudar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>data_types</build_depend>
  <build_depend>math_utils</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ros_msg_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>state_msgs</build_depend>
  <build_depend>uwb_msgs</build_depend>
  <build_depend>rosbag_utils</build_depend>
  <build_export_depend>data_types</build_export_depend>
  <build_export_depend>math_utils</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>ros_msg_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>state_msgs</build_export_depend>
  <build_export_depend>uwb_msgs</build_export_depend>
  <build_export_depend>rosbag_utils</build_export_depend>
  <exec_depend>data_types</exec_depend>
  <exec_depend>math_utils</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ros_msg_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>state_msgs</exec_depend>
  <exec_depend>uwb_msgs</exec_depend>
  <exec_depend>rosbag_utils</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
